jquery - seletores - atributos

--- a/jquery/seletores/index.html
+++ b/jquery/seletores/index.html
@@ -117,7 +117,7 @@
             // verificando os atributos que termiam com uma expressao especifica
             // $('.header-border li [href=".html"]').text()
 
-            // verificando os atributos que possuem a expressam informada
+            // verificando os atributos que possuem a expressao informada
             // $('.header-border li [href*="in"]').text()
 
         </script>
