--- a/jquery/seletores/index.html
+++ b/jquery/seletores/index.html
@@ -145,10 +145,13 @@
                 // selecionando os elementos que possuem conteudo
                 //$('.cars_list li:parent').append('<span style="color: green"> - tem valor</span>')
 
+                // selecionando os elementos que possuem outros elementos
+                /*
                 $('.cars_list li:has(span)').animate({
                     fontSize: '30px',
                     opacity: 0.7
                 }, 2000)
+                */
 
             })
 
