jquery - seletores - filtros de formularios - parte 1

--- a/jquery/seletores/index.html
+++ b/jquery/seletores/index.html
@@ -157,6 +157,9 @@
                 // selecionando um checkbox
                 // $('#register :checkbox').trigger('click')
 
+                // selecionando os elementos "checados"
+                // $('input:checked').val()
+
             })
 
         </script>
