jquery - seletores - filtros de formularios - parte 2

--- a/jquery/seletores/index.html
+++ b/jquery/seletores/index.html
@@ -151,6 +151,21 @@
 
                 })
 
+                $('input').focus(function() {
+
+                    $('input:focus').val('ola vc clicou aqui')
+
+
+                })
+
+                $('#register :submit').click(function(event) {
+
+                    event.preventDefault();
+
+                    console.log('vc clickou no botao submit')
+                
+                })
+
                 // selecionando um botao
                 // $('#register :button').text()
 
@@ -159,6 +174,12 @@
 
                 // selecionando os elementos "checados"
                 // $('input:checked').val()
+
+                // selecionando os elementos desabilitados
+                // $('#register :disabled').val('marcos@gmail.com.br').prop('disabled', false);
+
+                // selecionando o botao submit
+                // $('#register :submit').css('background-color', 'orange')
 
             })
 
