--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -64,7 +64,7 @@
             <main class="container">
 
                 <div class="title">
-                    <h1>Home Page</h1>
+                    <h1 title="Titulo principal">Home Page</h1>
                 </div>
 
                 <p class="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis dolor excepturi temporibus maiores, fuga id porro officiis officia cupiditate debitis quasi et magni nostrum possimus eum, tempore libero ducimus omnis!</p>
@@ -103,6 +103,10 @@
                 </div>
 
                 <button type="button" id="toggle_cars">exibir/esconder os carros</button>
+
+                <div>
+                    <img src="assets/images/logo-hcode.svg" alt="logo da hcode">
+                </div>
              
             </main>
 
@@ -132,6 +136,12 @@
 
             $(document).ready(function(){
 
+
+                // retornando ou definindo um atributo
+                // $('img').attr('src', 'assets/images/jquery.jpg')
+
+                // removendo um atributo
+                // $('h1').removeAttr('title')
 
 
             })
