jquery - manipulando o dom - manipulando propriedades

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -136,8 +136,11 @@
 
             $(document).ready(function(){
 
+                // retorna ou define uma propriedade
+                // $('form [type=checkbox]').prop('checked', true);
 
-
+                // removendo uma propriedade
+                // $('h1').removeProp('nome')
 
             })
 
