jquery - manipulando o dom - manipulando propriedades

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -139,6 +139,9 @@
                 // retorna ou define uma propriedade
                 // $('form [type=checkbox]').prop('checked', true);
 
+                // adicionando uma propriedade
+                // $('h1').prop('nome', 'titulo')
+
                 // removendo uma propriedade
                 // $('h1').removeProp('nome')
 
