--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -136,7 +136,9 @@
 
             $(document).ready(function(){
 
-
+                // retornando ou definindo o valor de uma campo
+                // $('form [type=text]:first').val('george')
+                // $('form [type=date]').val('1977-05-25')
 
             })
 
