jquery - manipulando o dom - armazendo dados nos elementos

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -136,7 +136,14 @@
 
             $(document).ready(function(){
 
+                // retornando ou definindo o dado de um elemento
+                // $('.cars_list li:first').data('ano', '1990')
 
+                $('.cars_list li').click(function() {
+
+                    console.log(`esse carro é do ano de ${$(this).data('ano')}`)
+
+                })
 
             })
 
