--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -67,7 +67,7 @@
                     <h1 title="Titulo principal">Home Page</h1>
                 </div>
 
-                <p class="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis dolor excepturi temporibus maiores, fuga id porro officiis officia cupiditate debitis quasi et magni nostrum possimus eum, tempore libero ducimus omnis!</p>
+                <p class="paragrafo" style="padding: 20px 10px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis dolor excepturi temporibus maiores, fuga id porro officiis officia cupiditate debitis quasi et magni nostrum possimus eum, tempore libero ducimus omnis!</p>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, facilis sapiente fugit molestias nam quo recusandae eligendi doloribus reiciendis culpa. Dolorum illum magnam fugit reprehenderit. Expedita ipsum qui odit distinctio!
                 Ullam quam laboriosam officiis obcaecati sunt molestias expedita fugiat corrupti aliquid atque ratione accusamus voluptatibus, ducimus repellendus esse consequatur nostrum aliquam, minus commodi explicabo fuga, qui asperiores? Dicta, reprehenderit ut.
@@ -136,7 +136,17 @@
 
             $(document).ready(function(){
 
+                // retorna ou define a largura de um elemento
+                // $('.paragrafo').width(500)
 
+                // retorna ou define a largura de um elemento, levando em conta o padding
+                // $('.paragrafo').innerWidth();
+
+                // retorna ou define a altura de um elemento
+                // $('.paragrafo').height(100);
+
+                // retorna ou define a altura de um elemento, levando em conta o padding
+                // $('.paragrafo').innerHeight();
 
             })
 
