jquery - manipulando o dom - mudando a posicao dos elementos

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
-    <body>
+    <body style="width: 2000px;">
 
         <header>
 
@@ -136,6 +136,21 @@
 
             $(document).ready(function(){
 
+                // retornando ou definindo a posicao de um elemento
+                //$('form .field:eq(1)').offset({
+                //    top: 5,
+                //    left: 100
+                //})
+
+
+                // retorna a posicao de um elemento se baseando no elemento pai
+                // $('form .field:eq(1)').position();
+
+                // retorna ou define a posicao da barra de rolagem
+                // $(document).scrollTop()
+
+                // retornando ou definindo a posicao da barra de rolagem horizontal
+                // $(document).scrollLeft()
 
             })
 
