--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
-    <body style="width: 2000px;">
+    <body >
 
         <header>
 
@@ -136,7 +136,17 @@
 
             $(document).ready(function(){
 
+                // adicionando um elemento ao final de outro
+                // $('.menu ul').append('<li><a href="#">news</a></li>')
 
+                // adicionando um elemento ao final de outro com outra syntaxe
+                // $('<li><a href="#">news2</a></li>').appendTo('.menu ul')
+
+                // adicionando um elemento no inciio de outro
+                // $('.menu ul').prepend('<li><a href="#">produtos</a></li>')
+
+                // adicionando um elemento no inciio de outro em outra sintaxe
+                // $('<li><a href="#">produtos</a></li>').prependTo('.menu ul')
 
             })
 
