jquery - manipulando o dom - adicionando elemento html - parte 2

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -148,6 +148,25 @@
                 // adicionando um elemento no inciio de outro em outra sintaxe
                 // $('<li><a href="#">produtos</a></li>').prependTo('.menu ul')
 
+                // adicionando um elemento apos outro
+                // $('.paragrafo').after('<h2>Hcode treinamentos</h2>');
+
+                //  adicionando um elemento apos outro, com uma outra sintaxe
+                // $('<h2>Hcode treinamentos</h2>').insertAfter('.paragrafo')
+
+                // adicionando um elemento antes de outro
+                // $('.paragrafo').before('<h2>introducao</h2>')
+
+
+                // adicionando um elemento antes de outro com outra sintaxe
+                // $('<h2>introducao</h2>').insertBefore('.paragrafo')
+
+                // adicionando um elemento em volta de outro
+                // $('.cars_list li').wrap('<i></i>')
+
+                // adicionando um elemento em volta do conteudo de outro
+                // $('.cars_list li').wrapInner('<i></i>')
+
             })
 
         </script>
