jquery - manipulando o dom - clonando elementos html

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -136,25 +136,15 @@
 
             $(document).ready(function(){
 
-                // removendo elementos
-                // $('.cars_list li:eq(1)').remove()
+                // clonando um elemento
+                // let el = $('.title').clone(true);
 
-                // removendo o conteudo do elemento
-                // $('.cars_list li:eq(1)').empty()
-
-                // removendo um elemento, mas mantendo seus eventos associados
-                // let txt = $('.paragrafo').detach();
-
-                // removendo os elementos em volta de outro
-                // $('.cars_list li').unwrap();
-
-                $('.paragrafo').click(function() {
-                    $(this).html('voce clickou em mim')
+                $('.title').click(function() {
+                    $(this).css('outline', '5px solid red')
                 })
 
-                let txt = $('.paragrafo').detach();
-
-                $('section main p').before(txt)
+                let el = $('.title').clone(true);
+                el.appendTo('section main')
 
             })
 
