jquery - manipulando o dom - alterando o conteudo do html

--- a/jquery/manipulando_dom/index.html
+++ b/jquery/manipulando_dom/index.html
@@ -136,15 +136,12 @@
 
             $(document).ready(function(){
 
-                // clonando um elemento
-                // let el = $('.title').clone(true);
+                // retornando o conteudo html de um elemento
+                // $('header .menu li:eq(1)').html()
+                // $('header .menu li:eq(1)').html('<a href="www.google.com.br"></a>')
 
-                $('.title').click(function() {
-                    $(this).css('outline', '5px solid red')
-                })
-
-                let el = $('.title').clone(true);
-                el.appendTo('section main')
+                // retornando o conteudo de texto do elemento
+                // $('header .menu li:eq(1)').text()
 
             })
 
