jquery - eventos jquery - eventos de mouse - parte 1

--- a/jquery/eventos/index.html
+++ b/jquery/eventos/index.html
@@ -240,6 +240,9 @@
             })
             */
 
+            // simulando o duplo clique
+            // $('table tbody tr:eq(2)').dblclick();
+
 
         });
         
