--- a/jquery/eventos/index.html
+++ b/jquery/eventos/index.html
@@ -192,20 +192,19 @@
 
                 let sections = ['.title', '.books', '.register'];
 
-                let el;
+                let index;
 
                 if(position < 50) {
-                    el = $(sections[0]);
-                    sections.splice(0,1);
+                    index = 0;
                 } else if(position < 200) {
-                    el = $(sections[1])
-                    sections.splice(1,1)
+                    index = 1;
                 } else if(200 < position < 400) {
-                    el = $(sections[2])
-                    sections.splice(2,1)
+                    index = 2;
                 }
 
-                $(el).addClass('selected_section');
+                $(sections[index]).addClass('selected_section');
+
+                sections.splice(index, 1);
 
                 $(sections.join(', ')).removeClass('selected_section')
 
