jquery - eventos jquery - a importancia do metodo on

--- a/jquery/eventos/index.html
+++ b/jquery/eventos/index.html
@@ -210,6 +210,22 @@
 
             })
 
+            $('#books_list tbody td').on('click contextmenu', function(e) {
+
+                if(e.type == 'contextmenu') e.preventDefault()
+
+                $('#books_list tbody td').css({
+                    backgroundColor: 'initial',
+                    color: "initial"
+                });
+
+                $(this).css({
+                    backgroundColor: 'black',
+                    color: 'white'
+                })
+
+            })
+
         });
         
     </script>
