--- a/jquery/animacoes/index.html
+++ b/jquery/animacoes/index.html
@@ -104,29 +104,14 @@
         
             $(document).ready(function(){
 
-                // escondendo um elemento com a animação "fadeOut"
-                $('.courses_list .course_item_inner:eq(3)').fadeOut('fast')
+                // escondendo um elemento com o efeito de "sliding"
+                $('.courses_list .course_item_inner:eq(4)').slideUp('fast');
 
+                // exibindo um elemento com o efeito de "sliding"
+                $('.courses_list .course_item_inner:eq(4)').slideDown('fast');
 
-                // exibindo um elemento com a animacao "fadeIn"
-                $('.courses_list .course_item_inner:eq(3)').fadeIn(3000, function() {
-
-                    $(this).css('border', 'solid red 2px')
-
-                })
-
-
-                // alterando a opacidade de um elemento com a animação
-                $('.logo img').fadeTo(1000, 0.9);
-
-
-                $('.btn_toggle_item').on('click', function() {
-
-                    $(this).prev('.course_item_inner').fadeToggle('slow', function() {
-                        console.log('sumi ou apareci')
-                    })
-
-                })
+                // exibindo ou escondendo um elemento com efeito de "sliding"
+                $('.courses_list .course_item_inner:eq(4)').slideToggle(3000);
 
             });
             
